examples/test/testpolicy393.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy393
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key40: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value42
          key12: value24
          key46: value38
      podSelector:
        matchLabels:
          key30: value34
